<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/symja_prgm_input_height"
        android:layout_margin="0dp"
        android:background="?colorSurfaceContainerHigh"
        android:padding="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.symja.editor.SymjaEditor
                android:id="@+id/edit_input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/symja_prgm_button_input"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:typeface="monospace"
                app:textSize="14sp"
                tools:ignore="HardcodedText,ClassNameCheck"
                tools:text="a:=2;\nb:=\nc:=4\nd:=5\ne:=6\n"
                tools:textSize="14sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:listDivider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:baselineAligned="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_show_hide_input"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:minWidth="48dp"
                        android:padding="14dp"
                        android:textAllCaps="false"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="12sp"
                        app:srcCompat="@drawable/round_expand_less_24"
                        app:tint="?android:textColorPrimary" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_copy"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/symja_prgm_button_copy"
                        android:focusable="true"
                        android:minWidth="48dp"
                        android:padding="14dp"
                        android:textAllCaps="false"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="12sp"
                        app:srcCompat="@drawable/baseline_content_copy_24"
                        app:tint="?android:textColorPrimary" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_paste"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/symja_prgm_button_paste"
                        android:focusable="true"
                        android:minWidth="48dp"
                        android:padding="14dp"
                        android:textAllCaps="false"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="12sp"
                        app:srcCompat="@drawable/baseline_content_paste_24"
                        app:tint="?android:textColorPrimary" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_undo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/symja_prgm_button_undo"
                        android:focusable="true"
                        android:minWidth="48dp"
                        android:padding="14dp"
                        android:textAllCaps="false"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="12sp"
                        app:srcCompat="@drawable/round_undo_24"
                        app:tint="?android:textColorPrimary" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_redo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/symja_prgm_button_redo"
                        android:focusable="true"
                        android:minWidth="48dp"
                        android:padding="14dp"
                        android:textAllCaps="false"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="12sp"
                        app:srcCompat="@drawable/round_redo_24"
                        app:tint="?android:textColorPrimary" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_run"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:minWidth="48dp"
                    android:text="@string/symja_prgm_button_run"
                    android:textColor="?colorOnPrimary"
                    app:icon="@drawable/round_play_circle_outline_18" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/Base.Widget.AppCompat.ProgressBar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center_vertical"
                    android:visibility="gone"
                    tools:visibility="visible" />


            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_drag_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <com.symja.programming.view.dragbutton.DragButton
                android:id="@+id/big_drag_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:clickable="true"
                android:focusable="true"
                tools:alpha="0.3"
                tools:showIn="@layout/symja_prgm_fragment_programming_console">

            </com.symja.programming.view.dragbutton.DragButton>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symja_prgm_message_drag_to_select_symbol"
                android:textColor="?colorSecondary" />
        </LinearLayout>

    </FrameLayout>
</merge>